[package]
name = "docker_plugin"
description = "Scaffolding for implementing docker plugins in rust"
authors = ["Michal Hornicky <semtexzv@gmail.com>"]
repository = "https://github.com/semtexzv/docker_plugin"
readme = "README.MD"

version = "0.0.2"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"

axum = { version = "0.6.18", features = ["macros"] }